[tool.poetry]
name = "poetry-project-package"
version = "0.1.0"
description = "test_description_of_poetry_project"
authors = ["azavialov"]
readme = "README.md"
packages = [{include = "poetry_project_package"}]

[tool.poetry.dependencies]
python = "^3.11"
pytest = ">=7.3.1"
selene = ">=2.0.0rc2"


[tool.poetry.group.dev.dependencies]
pylint = ">=2.17.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
